# ReybotsWebsite

./: .gitignore  Cargo.toml  Dioxus.toml
assets/images/: Country Grocer Logo.avif  EvokeBuildingsLogo.avif  FocalEngineeringLogo.avif  FronteraHomesLogo.avif  Howell Data Systems Logo.avif  KnappetProjectsIncLogo.avif  LittleOwlLearningCenterLogo.avif  SenseEngineeringLogo.avif  StevensonLuchiesAndLeghLogo.avif  TylerMechanicalLogo.avif  VancouverIslandChildYouthAndFamilyCounsellingServicesLogo.avif  sponsor_us.avif
assets/styles/: footer.css  main.css  navbar.css  sponsor_us.css  sponsors.css
data/: sponsors.json
src/: main.rs
src/components/: footer.rs  mod.rs  nav.rs
src/data/: mod.rs
src/data_components/: mod.rs  sponsor.rs  sponsors.rs
src/data_types/: sponsor.rs
src/pages/: about.rs  competitions.rs  contact.rs  home.rs  mod.rs  sponsor_us.rs  sponsors.rs
src/util/: document.rs
src/views/: about.rs  competitions.rs  contact.rs  footer.rs  home.rs  mod.rs  nav.rs  navbar.rs  sponsor_us.rs  sponsors.rs
styles/: navbar.css
