[package]
name = "reybots"
version = "0.1.0"
authors = ["Tyler <tylerjstocks@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["web", "router"] }
dioxus-resize-observer = "0.3.0"
dioxus-use-mounted = "0.3.1"
serde = "1.0.219"
serde_json = "1.0.140"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
